--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,19 +63,19 @@
 
   <div class="container">
     <article>
-      <h2><a href="#">What it feels like to want everything</a></h2>
+      <h2><a href="entry1.html">What it feels like to want everything</a></h2>
       <time>May 15, 2025</time>
       <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
     </article>
 
     <article>
-      <h2><a href="#">Notes on stillness</a></h2>
+      <h2><a href="entry2.html">Notes on stillness</a></h2>
       <time>May 13, 2025</time>
       <p>Stillness isn’t silence. It’s a hum. A low, aching presence that asks nothing from you but your breath.</p>
     </article>
 
     <article>
-      <h2><a href="#">Why I scan things that don’t matter</a></h2>
+      <h2><a href="entry3.html">Why I scan things that don’t matter</a></h2>
       <time>May 9, 2025</time>
       <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
     </article>
