--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name — Blog</title>
+  <title>Oro y Sangre</title>
   <style>
     body {
       margin: 0;
@@ -63,19 +63,19 @@
 
   <div class="container">
     <article>
-      <h2><a href="entry1.html">What it feels like to want everything</a></h2>
+      <h2><a href="entry1.html">Some answers hum</a></h2>
       <time>May 15, 2025</time>
       <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
     </article>
 
     <article>
-      <h2><a href="entry2.html">Notes on stillness</a></h2>
+      <h2><a href="entry2.html">I live up in the air and I don't belong to any country</a></h2>
       <time>May 13, 2025</time>
       <p>Stillness isn’t silence. It’s a hum. A low, aching presence that asks nothing from you but your breath.</p>
     </article>
 
     <article>
-      <h2><a href="entry3.html">Why I scan things that don’t matter</a></h2>
+      <h2><a href="entry3.html">At peace and on fire</a></h2>
       <time>May 9, 2025</time>
       <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
     </article>
