updated titles, no borders

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Oro y Sangre</title>
+  <title>Your Name — Blog</title>
   <style>
     body {
       margin: 0;
@@ -13,23 +13,13 @@
       font-family: 'Helvetica Neue', sans-serif;
       line-height: 1.6;
     }
-    header {
-      padding: 3rem 2rem 1rem;
-      text-align: center;
-    }
-    header h1 {
-      font-size: 2rem;
-      font-weight: 300;
-      letter-spacing: 2px;
-    }
     .container {
       max-width: 700px;
       margin: 0 auto;
-      padding: 2rem;
+      padding: 4rem 2rem;
     }
     article {
       margin-bottom: 3rem;
-      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
       padding-bottom: 2rem;
     }
     article h2 {
@@ -49,18 +39,13 @@
     a {
       color: #ffffff;
       text-decoration: none;
-      border-bottom: 1px solid #444;
     }
     a:hover {
-      border-color: #999;
+      border-bottom: 1px solid #999;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Your Blog — Internal / External</h1>
-  </header>
-
   <div class="container">
     <article>
       <h2><a href="entry1.html">Some answers hum</a></h2>
