--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name — Blog</title>
+  <title>Oro y sangre</title>
   <style>
     body {
       margin: 0;
@@ -25,14 +25,14 @@
     article h2 {
       font-weight: 400;
       font-size: 1.4rem;
-      margin-bottom: 0.5rem;
+      margin-bottom: 0.2rem;
     }
     article time {
       font-size: 0.85rem;
       color: #888;
     }
     article p {
-      margin-top: 1rem;
+      margin-top: .4rem;
       font-size: 1rem;
       color: #ccc;
     }
