--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oro y sangre</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
       margin: 0;
@@ -30,9 +31,11 @@
     article time {
       font-size: 0.85rem;
       color: #888;
+      display: block;
+      margin-bottom: 0.4rem;
     }
     article p {
-      margin-top: .4rem;
+      margin-top: 0.4rem;
       font-size: 1rem;
       color: #ccc;
     }
