--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 <body>
   <div class="container">
     <article>
-      <h2><a href="entry1.html">Some answers hum</a></h2>
+      <h2><a href="01.html">Some answers hum</a></h2>
       <time>May 15, 2025</time>
       <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
     </article>
 
     <article>
-      <h2><a href="entry2.html">I live up in the air and I don't belong to any country</a></h2>
+      <h2><a href="02.html">I live up in the air and I don't belong to any country</a></h2>
       <time>May 13, 2025</time>
       <p>Stillness isn’t silence. It’s a hum. A low, aching presence that asks nothing from you but your breath.</p>
     </article>
 
     <article>
-      <h2><a href="entry3.html">At peace and on fire</a></h2>
+      <h2><a href="03.html">At peace and on fire</a></h2>
       <time>May 9, 2025</time>
       <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
     </article>
