--- a/01.html
+++ b/01.html
@@ -22,8 +22,8 @@
 </head>
 <body>
   <a href="index.html">← Atrás</a>
-  <h1>Some answers hum</h1>
-  <p><em>May 15, 2025</em></p>
+  <h1 style="font-weight: 300;">Some answers hum</h1>
+  <p style="font-style: normal; font-size: 0.85rem; color: #888;">May 15, 2025</p>
   <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
   <p>It’s not indecision — it’s grief over abundance. A mourning of unlived timelines.</p>
 </body>
