--- a/index.html
+++ b/index.html
@@ -7,32 +7,12 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <style>
-    /* Font-face declarations for PPFraktionMono */
-    @font-face {
-      font-family: 'PPFraktionMono';
-      src: url('fonts/PPFraktionMono-Regular.woff2') format('woff2');
-      font-weight: 400;
-      font-style: normal;
-    }
-    @font-face {
-      font-family: 'PPFraktionMono';
-      src: url('fonts/PPFraktionMono-Bold.woff2') format('woff2');
-      font-weight: 700;
-      font-style: normal;
-    }
-    @font-face {
-      font-family: 'PPFraktionMono';
-      src: url('fonts/PPFraktionMono-Light.woff2') format('woff2');
-      font-weight: 300;
-      font-style: normal;
-    }
-
     body {
       margin: 0;
       padding: 0;
       background: #0e0e0e;
       color: #ffffff;
-      font-family: 'PPFraktionMono', monospace;
+      font-family: 'Helvetica Neue', sans-serif;
       line-height: 1.6;
     }
 
@@ -51,7 +31,7 @@
     article h2 {
       font-weight: 400;
       font-size: 1.4rem;
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.25rem;
     }
 
     article time {
@@ -63,9 +43,10 @@
     }
 
     article p {
-      margin-top: 0.4rem;
+      margin-top: 1.2rem;
       font-size: 1rem;
       color: #ccc;
+      text-align: justify;
     }
 
     a {
@@ -74,7 +55,7 @@
     }
 
     a:hover {
-      border-bottom: 1px solid #999;
+      text-decoration: none;
     }
 
     /* Instagram link in bottom right */
@@ -82,13 +63,12 @@
       position: fixed;
       bottom: 1rem;
       right: 1rem;
-      font-size: 0.9rem;
-      color: #888;
+      font-size: 1.1rem;
+      color: #ffffff;
       text-decoration: none;
-      font-family: 'PPFraktionMono', monospace;
     }
     .instagram-link:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   </style>
 </head>
@@ -97,19 +77,19 @@
     <article>
       <h2><a href="01.html">Some answers hum</a></h2>
       <time>May 15, 2025</time>
-      <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
 
     <article>
       <h2><a href="02.html">I live up in the air and I don't belong to any country</a></h2>
       <time>May 13, 2025</time>
-      <p>Stillness isn’t silence. It’s a hum. A low, aching presence that asks nothing from you but your breath.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
 
     <article>
       <h2><a href="03.html">At peace and on fire</a></h2>
       <time>May 9, 2025</time>
-      <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
   </div>
 
