--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     body {
       margin: 0;
       padding: 0;
-      background: #0e0e0e;
+      background: #000000;
       color: #ffffff;
       font-family: 'Helvetica Neue', sans-serif;
       line-height: 1.6;
