--- a/03.html
+++ b/03.html
@@ -6,7 +6,7 @@
   <title>At peace and on fire</title>
   <style>
     body {
-      background: #0e0e0e;
+      background: #000000;
       color: #ffffff;
       font-family: 'Helvetica Neue', sans-serif;
       padding: 2rem;
