--- a/02.html
+++ b/02.html
@@ -6,7 +6,7 @@
   <title>I live up in the air</title>
   <style>
     body {
-      background: #0e0e0e;
+      background: #000000;
       color: #ffffff;
       font-family: 'Helvetica Neue', sans-serif;
       padding: 2rem;
