--- a/index.html
+++ b/index.html
@@ -70,6 +70,19 @@
     .instagram-link:hover {
       text-decoration: none;
     }
+
+    /* Proem link in bottom left */
+    .proem-link {
+      position: fixed;
+      bottom: 1rem;
+      left: 1rem;
+      font-size: 1.1rem;
+      color: #ffffff;
+      text-decoration: none;
+    }
+    .proem-link:hover {
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -93,6 +106,8 @@
     </article>
   </div>
 
+  <!-- Proem link -->
+  <a class="proem-link" href="about.html">Proem</a>
   <!-- Instagram link -->
   <a class="instagram-link" href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
 </body>
