--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
       text-decoration: none;
     }
 
+    /* Fixed footer bar background */
+    .fixed-footer-bg {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 2.5rem;
+      background-color: #000;
+      z-index: 1;
+    }
+
     /* Instagram link in bottom right */
     .instagram-link {
       position: fixed;
@@ -66,6 +77,7 @@
       font-size: 1.1rem;
       color: #ffffff;
       text-decoration: none;
+      z-index: 2;
     }
     .instagram-link:hover {
       text-decoration: none;
@@ -79,6 +91,7 @@
       font-size: 1.1rem;
       color: #ffffff;
       text-decoration: none;
+      z-index: 2;
     }
     .proem-link:hover {
       text-decoration: none;
@@ -106,6 +119,8 @@
     </article>
   </div>
 
+  <!-- Background bar for fixed links -->
+  <div class="fixed-footer-bg"></div>
   <!-- Proem link -->
   <a class="proem-link" href="about.html">Proem</a>
   <!-- Instagram link -->
