--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Oro y sangre</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-
   <style>
     body {
       margin: 0;
@@ -15,86 +14,56 @@
       font-family: 'Helvetica Neue', sans-serif;
       line-height: 1.6;
     }
-
     .container {
       max-width: 700px;
       margin: 0 auto;
       padding: 4rem 2rem;
-      position: relative;
     }
-
     article {
       margin-bottom: 3rem;
       padding-bottom: 2rem;
     }
-
     article h2 {
       font-weight: 400;
       font-size: 1.4rem;
-      margin-bottom: 0.25rem;
+      margin-bottom: 0.1rem;
     }
-
     article time {
       font-size: 0.85rem;
       color: #888;
       display: block;
-      margin-bottom: 0.4rem;
-      font-weight: 300;
+      margin-bottom: 0.8rem;
     }
-
     article p {
-      margin-top: 1.2rem;
+      margin-top: 0.4rem;
       font-size: 1rem;
       color: #ccc;
       text-align: justify;
     }
-
     a {
       color: #ffffff;
       text-decoration: none;
     }
-
     a:hover {
       text-decoration: none;
     }
-
-    /* Fixed footer bar background */
-    .fixed-footer-bg {
+    .footer-bar {
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 2.5rem;
-      background-color: #000;
-      z-index: 1;
+      height: 50px;
+      background: #000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 1.5rem;
+      box-sizing: border-box;
+      z-index: 10;
     }
-
-    /* Instagram link in bottom right */
-    .instagram-link {
-      position: fixed;
-      bottom: 1rem;
-      right: 1rem;
-      font-size: 1.1rem;
-      color: #ffffff;
-      text-decoration: none;
-      z-index: 2;
-    }
-    .instagram-link:hover {
-      text-decoration: none;
-    }
-
-    /* Proem link in bottom left */
-    .proem-link {
-      position: fixed;
-      bottom: 1rem;
-      left: 1rem;
-      font-size: 1.1rem;
-      color: #ffffff;
-      text-decoration: none;
-      z-index: 2;
-    }
-    .proem-link:hover {
-      text-decoration: none;
+    .footer-bar a {
+      color: #fff;
+      font-size: 1rem;
     }
   </style>
 </head>
@@ -119,11 +88,9 @@
     </article>
   </div>
 
-  <!-- Background bar for fixed links -->
-  <div class="fixed-footer-bg"></div>
-  <!-- Proem link -->
-  <a class="proem-link" href="about.html">Proem</a>
-  <!-- Instagram link -->
-  <a class="instagram-link" href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
+  <div class="footer-bar">
+    <a href="proem.html">Proem</a>
+    <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>
+  </div>
 </body>
 </html>
