--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
     article h2 {
       font-weight: 400;
       font-size: 1.4rem;
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.1rem;
+      line-height: 1.3;
     }
     article time {
       font-size: 0.85rem;
       color: #888;
       display: block;
-      margin-bottom: 1rem;
+      margin-bottom: 0.8rem;
     }
     article p {
       margin-top: 0.4rem;
@@ -52,7 +53,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 60px;
+      height: 50px;
       background: #000;
       display: flex;
       justify-content: space-between;
@@ -63,7 +64,7 @@
     }
     .footer-bar a {
       color: #fff;
-      font-size: 1.1rem;
+      font-size: 1.15rem;
     }
   </style>
 </head>
@@ -90,7 +91,7 @@
 
   <div class="footer-bar">
     <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
+    <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
