--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
     }
     .container {
       max-width: 700px;
-      margin: 0 auto;
+      margin: 0;
       padding: 4rem 2rem;
+    }
+    @media (min-width: 768px) {
+      .container {
+        margin-left: 1.5rem;
+      }
     }
     article {
       margin-bottom: 3rem;
@@ -33,7 +38,7 @@
       font-size: 0.85rem;
       color: #888;
       display: block;
-      margin-bottom: 0.8rem;
+      margin-bottom: 1rem;
     }
     article p {
       margin-top: 0.4rem;
@@ -64,7 +69,7 @@
     }
     .footer-bar a {
       color: #fff;
-      font-size: 1.15rem;
+      font-size: 1rem;
     }
   </style>
 </head>
