--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
   <div class="footer-bar">
     <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>
+    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
