--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
     @media (min-width: 768px) {
       .container {
-        margin-left: 1.5rem;
+        margin-left: 1.5rem; /* aligned closer to Proem */
       }
     }
     article {
@@ -32,19 +32,19 @@
       font-weight: 400;
       font-size: 1.4rem;
       margin-bottom: 0.1rem;
-      line-height: 1.3;
+      line-height: 1.2; /* tightened line spacing */
     }
     article time {
       font-size: 0.85rem;
       color: #888;
       display: block;
-      margin-bottom: 1rem;
+      margin-bottom: 1.2rem; /* slightly more gap after date */
     }
     article p {
       margin-top: 0.4rem;
       font-size: 1rem;
       color: #ccc;
-      text-align: justify;
+      text-align: justify; /* ensures text is justified */
     }
     a {
       color: #ffffff;
@@ -69,7 +69,7 @@
     }
     .footer-bar a {
       color: #fff;
-      font-size: 1rem;
+      font-size: 1.1rem; /* restored size */
     }
   </style>
 </head>
@@ -96,7 +96,7 @@
 
   <div class="footer-bar">
     <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
+    <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
