--- a/proem.html
+++ b/proem.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Proem | andreserj</title>
+  <title>Proem</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <style>
     body {
@@ -16,8 +16,13 @@
     }
     .container {
       max-width: 700px;
-      margin: -0.5;
-      padding: 2rem 2rem 4rem;
+      margin: 0;
+      padding: 1.5rem 2rem;
+    }
+    @media (min-width: 768px) {
+      .container {
+        margin-left: -0.5rem;
+      }
     }
     h1 {
       font-weight: 400;
@@ -57,10 +62,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Proem</h1>
-    <p>I live up in the air and I don’t belong to any country. I write because sometimes it’s the only way I understand myself. Marketing was the degree, but stories are the work. I believe in tone, texture, and timing—whether in film, design, or a line that doesn’t need to explain itself.</p>
-    <p>I grew up where language split in two. Spanish at home, English in school. That fracture still echoes in how I write, how I see, how I listen. I’m drawn to quiet things. Messy things. Honest things.</p>
-    <p>This is a place for work and thought. Not finished. Not perfect. But always true.</p>
+    <h1>Proem + about me</h1>
+    <p>Sergio is a First-Generation Latino-American Writer and Creative. His work blends introspection with cultural memory, often guided by quiet moments and the tension between dual identities. He is drawn to the intricacy in perception and interpretation, and believes the most honest creative work often begins where language fails.</p>
+    <p>With roots in marketing, film, and design, Sergio explores identity, desire, and dissonance across mediums—always chasing a specific feeling rather than form. Emotional, layered, and certain, shaped by a deep commitment to stillness, truth, and tonal clarity.</p>
+    <p>Las Vegas</p>
   </div>
 
   <div class="footer-bar">
