--- a/index.html
+++ b/index.html
@@ -13,46 +13,56 @@
       color: #ffffff;
       font-family: 'Helvetica Neue', sans-serif;
       line-height: 1.6;
+      font-size: 1.1rem;
     }
+
     .container {
       max-width: 700px;
       margin: 0;
       padding: 1.5rem 2rem;
     }
+
     @media (min-width: 768px) {
       .container {
-        margin-left: -0.5rem; /* aligned closer to Proem */
+        margin-left: -0.5rem;
       }
     }
+
     article {
       margin-bottom: 3rem;
       padding-bottom: .5rem;
     }
+
     article h2 {
       font-weight: 400;
-      font-size: 1.4rem;
+      font-size: 2rem;
       margin-bottom: 0.1rem;
-      line-height: 1.2; /* tightened line spacing */
+      line-height: 1.2;
     }
+
     article time {
       font-size: 0.85rem;
       color: #888;
       display: block;
-      margin-bottom: 1.2rem; /* slightly more gap after date */
+      margin-bottom: 1.2rem;
     }
+
     article p {
       margin-top: 0.4rem;
-      font-size: 1rem;
+      font-size: 1.1rem;
       color: #ccc;
-      text-align: justify; /* ensures text is justified */
+      text-align: justify;
     }
+
     a {
       color: #ffffff;
       text-decoration: none;
     }
+
     a:hover {
       text-decoration: none;
     }
+
     .footer-bar {
       position: fixed;
       bottom: 0;
@@ -67,9 +77,10 @@
       box-sizing: border-box;
       z-index: 10;
     }
+
     .footer-bar a {
       color: #fff;
-      font-size: 1.1rem; /* restored size */
+      font-size: 1.1rem;
     }
   </style>
 </head>
