--- a/proem.html
+++ b/proem.html
@@ -19,7 +19,7 @@
     .layout {
       display: flex;
       flex-direction: column;
-      padding: 2rem;
+      padding: 1.5rem 2rem;
     }
 
     @media (min-width: 768px) {
@@ -27,13 +27,13 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: flex-start;
-        padding: 2rem 3rem;
+        padding: 1.5rem 2rem;
       }
     }
 
     .container {
       max-width: 700px;
-      padding-right: 2rem;
+      margin: 0;
     }
 
     @media (min-width: 768px) {
@@ -62,13 +62,13 @@
       max-width: 500px;
       aspect-ratio: 1 / 1;
       object-fit: cover;
-      border-radius: 4px;
       margin-top: 2rem;
     }
 
     @media (min-width: 768px) {
       .portrait {
         margin-top: 0;
+        margin-left: 2rem;
       }
     }
 
@@ -107,7 +107,7 @@
       <p>Las Vegas</p>
     </div>
 
-    <img src="images/sergio.jpg" class="portrait">
+    <img src="images/me.jpg" class="portrait">
   </div>
 
   <div class="footer-bar">
