--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
       }
     }
 
+    /* ✅ Mobile-only: match footer bar spacing */
+    @media (max-width: 767px) {
+      .container {
+        padding: 1.5rem 1.5rem;
+      }
+    }
+
     article {
       margin-bottom: 3rem;
       padding-bottom: .5rem;
@@ -107,7 +114,7 @@
 
   <div class="footer-bar">
     <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/yourhandle" target="_blank">Instagram</a>
+    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
