--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     .footer-bar a {
-      color: #fff;
+      color: #f91010;
       font-size: 1.1rem;
       text-decoration: none;
     }
