--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       left: 0;
       width: 100%;
       height: 50px;
-      background: #000;
+      background: #f91010;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -79,7 +79,7 @@
     }
 
     .footer-bar a {
-      color: #f91010;
+      color: #fff;
       font-size: 1.1rem;
       text-decoration: none;
     }
