--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       left: 0;
       width: 100%;
       height: 50px;
-      background: #f91010;
+      background: #000;
       display: flex;
       justify-content: space-between;
       align-items: center;
