--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .container {
       max-width: 700px;
       margin: 0;
-      padding: 1.5rem 2rem;
+      padding: 4.5rem 2rem 2rem; /* extra top padding to account for fixed header */
     }
 
     @media (min-width: 768px) {
@@ -63,9 +63,9 @@
       text-decoration: none;
     }
 
-    .footer-bar {
+    .header-bar {
       position: fixed;
-      bottom: 0;
+      top: 0;
       left: 0;
       width: 100%;
       height: 50px;
@@ -79,20 +79,25 @@
       z-index: 10;
     }
 
-    .footer-bar a {
+    .header-bar a {
       color: #fff;
       font-size: 1.1rem;
       text-decoration: none;
     }
 
     @media (max-width: 767px) {
-      .footer-bar {
+      .header-bar {
         padding: 0 2rem; /* Mobile padding */
       }
     }
   </style>
 </head>
 <body>
+  <div class="header-bar">
+    <a href="proem.html">Proem</a>
+    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
+  </div>
+
   <div class="container">
     <article>
       <h2><a href="01.html">Some answers hum</a></h2>
@@ -111,11 +116,6 @@
       <time>May 9, 2025</time>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
-  </div>
-
-  <div class="footer-bar">
-    <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
