--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .container {
       max-width: 700px;
       margin: 0;
-      padding: 4.5rem 2rem 2rem; /* extra top padding to account for fixed header */
+      padding: 1.5rem 2rem;
     }
 
     @media (min-width: 768px) {
@@ -63,41 +63,36 @@
       text-decoration: none;
     }
 
-    .header-bar {
+    .footer-bar {
       position: fixed;
-      top: 0;
+      bottom: 0;
       left: 0;
       width: 100%;
       height: 50px;
       backdrop-filter: blur(10px);
-      background: rgba(0, 0, 0, 0.4); /* Frosted glass effect */
+      background: rgba(0, 0, 0, 0.4);
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 1.5rem; /* Desktop padding */
+      padding: 0 1.5rem;
       box-sizing: border-box;
       z-index: 10;
     }
 
-    .header-bar a {
+    .footer-bar a {
       color: #fff;
       font-size: 1.1rem;
       text-decoration: none;
     }
 
     @media (max-width: 767px) {
-      .header-bar {
-        padding: 0 2rem; /* Mobile padding */
+      .footer-bar {
+        padding: 0 2rem;
       }
     }
   </style>
 </head>
 <body>
-  <div class="header-bar">
-    <a href="proem.html">Proem</a>
-    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
-  </div>
-
   <div class="container">
     <article>
       <h2><a href="01.html">Some answers hum</a></h2>
@@ -116,6 +111,11 @@
       <time>May 9, 2025</time>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </article>
+  </div>
+
+  <div class="footer-bar">
+    <a href="proem.html">Proem</a>
+    <a href="https://instagram.com/serj__eo" target="_blank">Instagram</a>
   </div>
 </body>
 </html>
