--- a/01.html
+++ b/01.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Some answers hum</title>
+  <title>Some answers hum will only ever hum</title>
   <style>
     body {
       background: #000000;
       color: #ffffff;
       font-family: 'Helvetica Neue', sans-serif;
       padding: 2rem;
-      line-height: 1.6;
+      line-height: 1.7;
       max-width: 700px;
       margin: auto;
     }
@@ -18,12 +18,21 @@
       color: #999;
       text-decoration: none;
     }
+    p.meta {
+      font-size: 0.85rem;
+      color: #888;
+    }
   </style>
 </head>
 <body>
   <a href="index.html">← Atrás</a>
-  <p style="font-style: normal; font-size: 0.85rem; color: #888;">May 15, 2025</p>
-  <p>I’ve always felt a kind of soft panic under the skin. There are too many lives I could live. Too many selves I can’t decide between. So I wait. And the waiting hardens.</p>
-  <p>It’s not indecision — it’s grief over abundance. A mourning of unlived timelines.</p>
+  <p class="meta">May 26, 2025</p>
+
+  <p>Reacquainting myself with the person I’m quietly becoming. There's a rhythm, not out of resignation, but recognition. Long enough to know that most answers aren't urgent, and that understanding often arrives long after the need for it has passed. The self-inquiry that once felt like excavation has become something gentler—a tending to or maintenance. Not expecting resolution from most tensions, nor clarity from all aches. Some things just like accompanying.</p>
+
+  <p>Sobriety has made that more obvious. Fewer illusions to find comforting. Iinsecurities, out of habit more than hope—just part of the architecture now—and that’s fine.</p>
+
+  <p>Not everything demands interpretation and some truths arrive late. Still, I sit with them. I watch the light shift across the room and let most moments decide what they wanna be.</p>
+
 </body>
 </html>
