--- a/01.html
+++ b/01.html
@@ -30,7 +30,7 @@
 
   <p>Reacquainting myself with the person I’m quietly becoming. There's a rhythm, not out of resignation, but recognition. Long enough to know that most answers aren't urgent, and that understanding often arrives long after the need for it has passed. The self-inquiry that once felt like excavation has become something gentler—a tending to or maintenance. Not expecting resolution from most tensions, nor clarity from all aches. Some things just like accompanying.</p>
 
-  <p>Sobriety has made that more obvious. Fewer illusions to find comforting. Iinsecurities, out of habit more than hope—just part of the architecture now—and that’s fine.</p>
+  <p>Sobriety has made that more obvious. Fewer illusions to find comforting. Insecurities, out of habit more than hope—just part of the architecture now—and that’s fine.</p>
 
   <p>Not everything demands interpretation and some truths arrive late. Still, I sit with them. I watch the light shift across the room and let most moments decide what they wanna be.</p>
 
