--- a/02.html
+++ b/02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>I live up in the air</title>
+  <title>At peace and on fire</title>
   <style>
     body {
       background: #000000;
@@ -52,11 +52,11 @@
   <a href="index.html" class="back">← Atrás</a>
 
   <div class="container">
-    <p class="meta">April 15, 2025</p>
+    <p class="meta">May 9, 2025</p>
 
-    <p>Stillness isn’t silence. It’s a hum. A low, aching presence that asks nothing from you but your breath.</p>
+    <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
 
-    <p>It’s the absence of reaction, not the absence of emotion. Stillness listens. Stillness witnesses.</p>
+    <p>Sometimes I think I’m archiving the pieces of a self I haven’t lived yet — a quiet life made of images no one else thinks to keep.</p>
   </div>
 </body>
 </html>
