--- a/02.html
+++ b/02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>At peace and on fire</title>
+  <title>I live up in the air</title>
   <style>
     body {
       background: #000000;
@@ -52,11 +52,13 @@
   <a href="index.html" class="back">← Atrás</a>
 
   <div class="container">
-    <p class="meta">May 9, 2025</p>
+    <p class="meta">April 15, 2025</p>
 
-    <p>Ephemera feels like the only honest thing sometimes. Gum wrappers, receipts, the corner of a torn flyer — they hold a version of me that doesn’t perform.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
 
-    <p>Sometimes I think I’m archiving the pieces of a self I haven’t lived yet — a quiet life made of images no one else thinks to keep.</p>
+    <p>Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere. Cras sit amet nibh libero. Nulla vel metus scelerisque ante sollicitudin commodo.</p>
+
+    <p>Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
   </div>
 </body>
 </html>
