--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
   <div class="container">
     <article>
       <h2><a href="01.html">Some answers hum</a></h2>
-      <time>May 15, 2025</time>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <time>May 26, 2025</time>
+      <p>Once felt indulgent now it feels functional—less about untangling, more about maintaining.</p>
     </article>
 
     <article>
